2009-05-19  Georg von Hippel <gmv22@cantab.net>

	* Changed feynml.py to use hashlib instead of deprecated md5.

	* Added all FeynML linetypes to NamedLines in lines.py.

	* Added a "math" string attribute to FeynML objects and created
	a stylesheet to extract those and just multiply them together
	(using no particular syntax).

2009-05-18  Georg von Hippel <gmv22@cantab.net>

	* Added XSLT stylesheet for rudimentary FeynML to FeynMF
	transformation.

2009-05-13  Georg von Hippel <gmv22@cantab.net>

	* Fixed variable name "as" in lines.py to "ass"
	("as" is a reserved word in Python 2.6.x and 3.x).

	* Changed ElementTree import in feynml.py to use xml.etree package.

2009-01-08  Andy Buckley  <andy@insectnation.org>

	* Corrected capitalisation of PyX installation requirement.

2008-04-29  Andy Buckley  <andy@insectnation.org>

	* Fixed bug in points.py, pointed out by Sue Ann Koay.

2007-12-17  Andy Buckley  <andy@insectnation.org>

	* Removed docs from the tarball - cuts down package size
	enormously, can always be regenerated by developers and we'll make
	sure there's a version on the website for users.

	* Fixed bug with the curvature determination for gluino, gaugino
	and graviton lines: the max *radius* was being determined,
	i.e. minimum curvature! Also, there was no protection against the
	divergent radius for straight lines, as pointed out by Sue Ann
	Koay - thanks!

	* Added #! lines to all the examples.

2007-06-21  Andy Buckley  <andy@insectnation.org>

	* 0.3 release!

	* Updated docs and web page for release.

	* Fixed crosshatch pattern constants.

	* Added mkfeyndiag script.

	* Overhaul of the options system - it now works again AND can be
	integrated with command line options on executables.

2007-06-07  Georg von Hippel <gmv22@cantab.net>

	* Added fill pattern support to FeynML I/O

2007-05-29  Georg von Hippel <gmv22@cantab.net>

	* Added additional header tags to FeynML schema (those are not being
	parsed at the moment)
